--- a/form-signup.html
+++ b/form-signup.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap Form Example</title>
+  <title>signup page</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -14,26 +14,26 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6">
-        <h2 class="mb-4 text-center">Contact Form</h2>
+        <h2 class="mb-4 text-center">Contact Form new</h2>
         <form id="submit-form" class="submit-form">
 
           <input type="hidden">
           <!-- Name -->
           <div class="mb-3">
-            <label for="name" class="form-label">Full Name</label>
+            <label for="name" class="form-label">Full Name new</label>
             <input name="FullName" type="text" class="form-control" id="name" placeholder="Enter your full name"
               required>
           </div>
 
           <!-- Email -->
           <div class="mb-3">
-            <label for="email" class="form-label">Email address</label>
+            <label for="email" class="form-label">Email address new</label>
             <input name="Email" type="email" class="form-control" id="email" placeholder="name@example.com" required>
           </div>
 
           <!-- Password -->
           <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
+            <label for="password" class="form-label">Password new</label>
             <input type="password" name="Password" class="form-control" id="password" placeholder="Enter password"
               required>
           </div>
