--- a/form-signup.html
+++ b/form-signup.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap Form Example</title>
+  <title>Bootstrap Form Example 01</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6">
-        <h2 class="mb-4 text-center">Contact Form</h2>
+        <h2 class="mb-4 text-center">Contact Form 01</h2>
         <form id="submit-form" class="submit-form">
 
           <input type="hidden">
@@ -27,13 +27,13 @@
 
           <!-- Email -->
           <div class="mb-3">
-            <label for="email" class="form-label">Email address</label>
+            <label for="email" class="form-label">Email address 01</label>
             <input name="Email" type="email" class="form-control" id="email" placeholder="name@example.com" required>
           </div>
 
           <!-- Password -->
           <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
+            <label for="password" class="form-label">Password 01</label>
             <input type="password" name="Password" class="form-control" id="password" placeholder="Enter password"
               required>
           </div>
@@ -42,7 +42,7 @@
 
           <!-- Dropdown -->
           <div class="mb-3">
-            <label for="subject" class="form-label">Subject</label>
+            <label for="subject" class="form-label">Subject 01</label>
             <select name="subject" class="form-select" id="subject">
               <option selected disabled>Choose a subject</option>
               <option value="General Inquiry">General Inquiry</option>
@@ -52,7 +52,7 @@
           </div>
 
           <!-- Submit -->
-          <button type="submit" class="btn btn-primary w-100">Submit</button>
+          <button type="submit" class="btn btn-primary w-100">Submit 01</button>
         </form>
       </div>
       <div class="col-md-6">
